discussion/kv_engine/156557/156557_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Add mcbp_fuzz_test and mcbp_network_fuzz_test

mcbp_fuzz_test is a small test program which use libFuzzer
(https://llvm.org/docs/LibFuzzer.html) to test the package
validation code.

The program is not built by default, and you need to explicitly
add -DCB_LIBFUZZER=ON when invoking CMake (Note: you should also
be using clang and have libfuzzer available)

Once built it may be run with:

    ./mcbp_fuzz_test -max_len=32

(There isn't much value of larger values as the packet header
is the first 32 bytes).

To make sure that we run as much as the server code as possible
the signature for Cookie::validate() was changed to allow bypass
of logging and exceptions for illegal packets.

mcbp_network_fuzz_test is similar to mcbp_fuzz_test, but it'll
forward the packets to "localhost:11210" where you can run
memcached with address sanitizer and have it check everything
in the full context (currently it don't try to auth and select
bucket so you need "default bucket" configured if you want it
to try to execute the packets, but the odds of actually get
a correct packet is probably really low ;))

Change-Id: I74da642ce6f9623feb4598549418285e3ac5f12e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-30 14:15:29.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-30 14:30:06.000000000
Message: 
Patch Set 10: Code-Review-1

(1 comment)
Line:83, daemon/cookie.h -> I think it's best if we can avoid fuzz-specific flags / code-paths on the actual code under test - it runs the risk that the code behaves differently when being fuzz-tested vs the "normal" mode.

I think throwing and catching the exceptions when running with the fuzzer is fine, if we don't want to refactor the current validate() behaviour.

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-30 14:51:01.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10335/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10: error: "subdoc/operations.h" file not found [clang-diagnostic-error]
#include <subdoc/operations.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10335/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/front_end_thread.h:22:10:
error: "subdoc/operations.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12396/ : FAILURE

ThreadSanitizer issue: data race on vptr (ctor/dtor vs virtual call) ../kv_engine/include/memcached/tracer.h:132 in cb::tracing::Traceable::~Traceable()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12396/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19950/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31935/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8947/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11905/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12058/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10987/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-30 16:20:50.000000000
Message: 
Patch Set 10:

(1 comment)
Line:83, daemon/cookie.h -> Actually, the comment is wrong as we now no longer thow exceptions in the method.

As the fuzz test is currently I don't start up the rest of the framework in memcached (so I don't have an audit daemon running or initialized the logger). It would be nice to be able to just test the validation separately and not have to get all of the pieces up'n'running..

----------------------------------------------------------------------------------------------------------------------
